# assist_technical

./: .env  .env.example  README.md  pyproject.toml
docs/architecture/: c1_context.mmd  decisions.md
scripts/: audio_smoke_test.sh  run_mvp.sh
src/voice_agent/: main.py
src/voice_agent/application/orchestrators/: mvp_orchestrator.py
src/voice_agent/application/use_cases/: play_audio.py  record_audio.py  synthesize_speech.py  transcribe_audio.py  voice_pipeline.py
src/voice_agent/config/: settings.py
src/voice_agent/domain/models/: audio_models.py
src/voice_agent/domain/ports/: audio_input.py  audio_output.py  language_model.py  speech_to_text.py  text_to_speech.py
src/voice_agent/infrastructure/ai/openai/: openai_llm.py  openai_stt.py  openai_tts.py
src/voice_agent/infrastructure/audio/: local_file_audio_repository.py  respeaker_audio_io.py
src/voice_agent/infrastructure/system/: file_system.py  shell_audio_utils.py
src/voice_agent/interfaces/cli/: cli.py
